--- a/app/sass/_colors.sass
+++ b/app/sass/_colors.sass
@@ -1,4 +1,9 @@
 $colorWhite: #fff
 $colorBlack: #000
+$colorRed: #EE0000
+$colorGreen: #1E8B57
+$colorGray: #E7EAEE
+$colorPaleBlue: #D3D8E0
+$colorGrayTint: #F6F8F9
 
-$colors: (white: $colorWhite, black: $colorBlack)
+$colors: (white: $colorWhite, black: $colorBlack, red: $colorRed, green: $colorGreen, gray: $colorGray, pale-blue: $colorPaleBlue, gray-tint: $colorGrayTint)
