--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,18 +1,19 @@
 @font-face
-  font-family: 'MontserratAlternatesRegular'
-  src: url('/fonts/MontserratAlternates/MontserratAlternates-Regular/MontserratAlternates-Regular.ttf')
-  src: url('/fonts/MontserratAlternates/MontserratAlternates-Regular/MontserratAlternates-Regular.otf') format('embedded-opentype'), url('/fonts/MontserratAlternates/MontserratAlternates-Regular/MontserratAlternates-Regular.woff') format('woff')
+  font-family: 'BlackDiamond'
+  src: url('/fonts/BlackDiamond/BlackDiamond.ttf')
+  src: url('/fonts/BlackDiamond/BlackDiamond.eot') format('embedded-opentype'), url('/fonts/BlackDiamond/BlackDiamond.woff') format('woff')
 
 @font-face
-  font-family: 'MontserratAlternatesBold'
-  src: url('/fonts/MontserratAlternates/MontserratAlternates-Bold/MontserratAlternates-Bold.ttf')
-  src: url('/fonts/MontserratAlternates/MontserratAlternates-Bold/MontserratAlternates-Bold.otf') format('embedded-opentype'), url('/fonts/MontserratAlternates/MontserratAlternates-Bold/MontserratAlternates-Bold.woff') format('woff')
+  font-family: 'CirceBold'
+  src: url('/fonts/CirceBold/CirceBold.ttf')
+  src: url('/fonts/CirceBold/CirceBold.eot') format('embedded-opentype'), url('/fonts/CirceBold/CirceBold.woff') format('woff')
 
 @font-face
-  font-family: 'MontserratBold'
-  src: url('/fonts/Montserrat/Montserrat-Bold/Montserrat-Bold.ttf')
-  src: url('/fonts/Montserrat/Montserrat-Bold/Montserrat-Bold.otf') format('embedded-opentype'), url('/fonts/Montserrat/Montserrat-Bold/Montserrat-Bold.woff') format('woff')
+  font-family: 'CirceRegular'
+  src: url('/fonts/CirceRegular/CirceRegular.ttf')
+  src: url('/fonts/CirceRegular/CirceRegular.eot') format('embedded-opentype'), url('/fonts/CirceRegular/CirceRegular.woff') format('woff')
 
 @font-face
-  font-family: 'OpenSans'
-  src: url('/fonts/OpenSans/OpenSans-Regular.ttf')
+  font-family: 'CirceLight'
+  src: url('/fonts/CirceLight/CirceLight.ttf')
+  src: url('/fonts/CirceLight/CirceLight.eot') format('embedded-opentype'), url('/fonts/CirceLight/CirceLight.woff') format('woff')
