--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -6,11 +6,128 @@
     <!-- Header block -->
     {% include "layouts/header.twig" %}
     <!-- Header block end -->
+    <div class="advantages fw-width-1-1 fw-flex fw-flex-center fw-flex-top">
+        <div class="container">
+            <div class="advantages__content-wrapper  fw-grid fw-grid-80">
+                <div class="advantages__left fw-width-1-2">
+                    <h1 class="advantages__left-title fw-font-black-d fw-color-green fw-font-normal fw-margin-0 fw-mb-30 fw-fz-65 fw-line-height-85">Мой секрет вам поможет, если вы…</h1>
+                    <ul class="advantages__left-list fw-reset">
+                        <li class="advantages__left-list-item fw-mb-25 fw-flex fw-flex-bottom fw-flex-left">
+                            <span class="fw-fz-17 fw-font-circle-r fw-ml-10 fw-block">Считаете, что достойны большего. НАМНОГО большего</span>
+                        </li>
 
-    <div class="fw-width-1-1">
-        <h1>index</h1>
-        <i class="svg-font svg-font-check"></i>
+                        <li class="advantages__left-list-item fw-mb-25 fw-flex fw-flex-bottom fw-flex-left">
+                            <span class="fw-fz-17 fw-font-circle-r fw-ml-10 fw-block">Готовы зарабатывать много и зарабатывать буквально каждый день</span>
+                        </li>
+
+                        <li class="advantages__left-list-item fw-mb-25 fw-flex fw-flex-bottom fw-flex-left">
+                            <span class="fw-fz-17 fw-font-circle-r fw-ml-10 fw-block">Хотите и готовы изменить себя и свою жизнь</span>
+                        </li>
+
+                        <li class="advantages__left-list-item fw-mb-25 fw-flex fw-flex-bottom fw-flex-left">
+                            <span class="fw-fz-17 fw-font-circle-r fw-ml-10 fw-block">Мечтаете о полной финансовой свободе</span>
+                        </li>
+
+                        <li class="advantages__left-list-item fw-mb-25 fw-flex fw-flex-bottom fw-flex-left">
+                            <span class="fw-fz-17 fw-font-circle-r fw-ml-10 fw-block">Уверены, что богатство доступно для всех действительно его желающих</span>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="advantages__right fw-width-1-2">
+                    <h1 class="advantages__right-title fw-font-black-d fw-color-red fw-font-normal fw-margin-0 fw-mb-30 fw-fz-65 fw-line-height-85">Мой секрет окажется бесполезен, если вы…</h1>
+                    <ul class="advantages__right-list fw-reset">
+                        <li class="advantages__right-list-item fw-mb-25 fw-flex fw-flex-bottom fw-flex-left">
+                            <span class="fw-fz-17 fw-font-circle-r fw-ml-25 fw-block">Считаете, что достойны большего. НАМНОГО большего</span>
+                        </li>
+
+                        <li class="advantages__right-list-item fw-mb-25 fw-flex fw-flex-bottom fw-flex-left">
+                            <span class="fw-fz-17 fw-font-circle-r fw-ml-25 fw-block">Готовы зарабатывать много и зарабатывать буквально каждый день</span>
+                        </li>
+
+                        <li class="advantages__right-list-item fw-mb-25 fw-flex fw-flex-bottom fw-flex-left">
+                            <span class="fw-fz-17 fw-font-circle-r fw-ml-25 fw-block">Хотите и готовы изменить себя и свою жизнь</span>
+                        </li>
+
+                        <li class="advantages__right-list-item fw-mb-25 fw-flex fw-flex-bottom fw-flex-left">
+                            <span class="fw-fz-17 fw-font-circle-r fw-ml-25 fw-block">Мечтаете о полной финансовой свободе</span>
+                        </li>
+
+                        <li class="advantages__right-list-item fw-mb-25 fw-flex fw-flex-bottom fw-flex-left">
+                            <span class="fw-fz-17 fw-font-circle-r fw-ml-25 fw-block">Уверены, что богатство доступно для всех действительно его желающих</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <div class="feedback">
+        <div class="container middle-container">
+            <div class="feedback__content-wrapper">
+                <div class="fw-flex fw-flex-middle fw-flex-center fw-pb-45"><img src="/images/champion-2.svg" alt=""></div>
+                <h2 class="fw-font-black-d fw-text-center fw-font-normal fw-fz-65 fw-line-height-65 fw-color-red fw-margin-0 fw-mb-20">Заполните форму, и мой секрет – ваш!</h2>
+                <p class="fw-font-circle-r fw-fz-17 fw-line-height-30 fw-letter-spacing-1 fw-margin-0 fw-text-center fw-opacity-07">
+                    Я его вам дарю. Но я прошу вас заполнить эту форму. Зачем? Затем, что это действие требует хоть и небольшого,
+                    но усилия. Если вы готовы его приложить, значит, мой секрет вам действительно нужен. Значит, он попадет по адресу!
+                </p>
+
+                <div class="feedback__content fw-flex">
+                    <div class="fw-width-1-2 feedback__content-left fw-relative">
+                        <img src="/images/dots-bg.png" alt="">
+                        <div class="fw-relative">
+                            <img src="/images/book.png" alt="">
+                            <img src="/images/arrow-r.svg" alt="">
+                            <img src="/images/triangle.svg" alt="">
+                        </div>
+                    </div>
+                    
+                    <div class="fw-width-1-2 feedback__content-right">
+                        <form class="feedback-form">
+                            <div class="feedback-form__field-wrapper fw-mb-20"><input type="text" placeholder="Ваше имя"></div>
+                            <div class="feedback-form__field-wrapper fw-mb-20"><input type="tell:236982738" placeholder="Телефон"></div>
+                            <div class="feedback-form__field-wrapper fw-mb-20"><input type="email" placeholder="E-mail"></div>
+                            <button class="feedback-form__submit-btn fw-fz-20 fw-line-height-30 fw-color-white">Получить секрет</button>
+                            
+                            <div class="fw-width-1-1 fw-flex fw-flex-center fw-flex-middle">
+                                <span class="fw-fz-14 fw-font-circle-r fw-margin-0 fw-line-height-30 fw-text-underline">Политика конфиденциальности</span>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="start-way fw-pb-50">
+        <div class="container small-container">
+            <h2 class="start-way__title fw-font-normal fw-text-center fw-font-black-d fw-color-red fw-fz-65 fw-line-height-65 fw-margin-0 fw-mb-50">Все началось с поражения</h2>
+
+            <div class="start-way__content fw-relative fw-width-1-1 fw-relative fw-flex fw-flex-column fw-flex-center fw-flex-middle fw-font-circle-r fw-fz-17">
+                <img src="/images/quotes-1.svg" alt="">
+                <p class="start-way__description fw-line-height-30 fw-letter-spacing-1 fw-mt-0 fw-mb-40">Простите, я еще не представился. Меня зовут Михаил Авдеев, мне 28 лет. Родился и вырос в Москве, закончил средненький вуз, был полон амбиций и грандиозных планов, собирался покорить мир… А стал менеджером среднего звена в одной транспортной компании.</p>
+                <p class="start-way__description fw-line-height-30 fw-letter-spacing-1 fw-mt-0 fw-mb-40">Да, типичным, почти анекдотичным менеджером. Утром надевал костюм, полтора часа давился в общественном транспорте (машина-то есть, но на ней в Москве далеко не уедешь), затем приходил в офис, наливал кружку отвратительного кофе, садился за компьютер и телефон, писал отчеты и отдавал указания тем бедолагам, которым не хватило образования или сообразительности подняться хотя бы до моей унылой должности.</p>
+                <p class="start-way__description fw-line-height-30 fw-letter-spacing-1 fw-mt-0 fw-mb-40">Жизнь удалась? Жизнь провалилась! В какой-то момент я осознал, что даже если дорасту до высшего звена, то ничего, по сути, не изменится. Костюм станет подороже, а кофе получше. Вот и все. Сменить работу? Отличная идея… Только вот когда я общался с друзьями, которым, как и мне, «повезло» работать в офисе, то мне казалось, что они пересказывают мою жизнь. Все то же самое, только декорации другие.</p>
+                <img src="/images/long-arrow-bottom.svg" class="fw-mt-35" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="envy">
+        <div class="container small-container">
+            <h2 class="envy__title fw-font-normal fw-text-center fw-font-black-d fw-color-red fw-fz-65 fw-line-height-65 fw-margin-0 fw-mb-50">Потом пришла зависть</h2>
+
+            <div class="envy__content fw-width-1-1 fw-relative fw-flex fw-flex-column fw-flex-center fw-flex-middle fw-font-circle-r fw-fz-17">
+                <p class="start-way__description fw-line-height-30 fw-letter-spacing-1 fw-mt-0 fw-mb-40">И тогда у меня появилась зависть. Я не знаю, белая она была или черная. Не важно. Факт в том, что я завидовал людям, которые стали сами себе хозяевами, которые обрели полную финансовую свободу и независимость, которые позволяли себе все то, чего никогда не смогу позволить себе я. Не смогу, если так и останусь на прежних позициях.</p>
+                <p class="start-way__description fw-line-height-30 fw-letter-spacing-1 fw-mt-0 fw-mb-40">Я завидовал не только их доходам, машинам, квартирам и прочим земным благам. Я завидовал их чувствам, ощущениям. Тому, что они никому ничем не обязаны. Я завидовал их свободе.</p>
+                <p class="start-way__description fw-line-height-30 fw-letter-spacing-1 fw-mt-0 fw-mb-40">И я решил изменить свою жизнь. Я решил найти свой секрет успеха. И я его нашел.</p>
+                <img src="/images/quotes-2.svg" class="fw-mt-35" alt="">
+            </div>
+
+            <div class="envy__btn-wrapper fw-flex fw-flex-center fw-flex-middle"><button class="fw-color-white fw-fz-20 fw-font-circle-r">Хочу так же</button></div>
+        </div>
+    </div>
+
 
     <!-- footer block -->
     {% include "layouts/footer.twig" %}
