--- a/app/sass/_variables.sass
+++ b/app/sass/_variables.sass
@@ -1,15 +1,15 @@
-$padding: (0, 10, 15,)
-$margin: (0, 15,)
+$padding: (0, 10, 15, 40, 45, 50, 57)
+$margin: (0, 10, 12, 15, 20, 25, 50)
 $marginInverse: (0)
-$fz: (0, 12, 14, 16, 18)
-$grid: (0)
+$fz: (0, 12, 14, 15, 17, 20, 24, 26, 28, 32, 36, 45, 65, 85)
+$grid: (0, 80)
 $width: (0)
 $height: (0)
 $top: (0)
 $right: (0)
 $left: (0)
 $bottom: (0)
-$letterSpacing: (0)
+$letterSpacing: (0, 1)
 // do not edit
 $width_grid: ((1, 1), (1, 2), (1, 3), (2, 3), (1, 4), (2, 4), (3, 4), (1, 5), (2, 5), (3, 5), (4, 5), (1, 6),(2, 6),(3, 6), (4, 6), (5, 6))
 $height_grid: ((1, 1), (1, 1))
