--- a/app/sass/framework/_fonts.sass
+++ b/app/sass/framework/_fonts.sass
@@ -2,19 +2,9 @@
   .fw-fz-#{$value}
     font-size: #{$value}px
 
-@each $value in $fz
-  @media screen and (max-width: 950px)
-    .fw-fz-#{$value}\@xl
-      font-size: #{$value}px
-
-@each $value in $fz
-  @media screen and (max-width: 767px)
-    .fw-fz-#{$value}\@xs
-      font-size: #{$value}px
-
-  @each $value in 0, 16, 18, 20, 22, 25, 30, 40, 42, 54
-    .fw-line-height-#{$value}
-      line-height: #{$value}px
+@each $value in 0, 16, 17, 18, 20, 22, 24, 25, 30, 35, 40, 42, 45, 50, 65, 85
+  .fw-line-height-#{$value}
+    line-height: #{$value}px
 
 @each $value in '1-2', '1-4', '1-5', '1-7', '2', '1-0'
   .fw-line-height-#{$value}
@@ -22,6 +12,7 @@
 
 .fw-font-arial
   font-family: Arial, sans-serif
+
 @each $value in 100, 300, 400, 500, 600
   .fw-text-#{$value}
     font-weight: #{$value}
@@ -53,14 +44,14 @@
 .fw-text-no-wrap
   white-space: nowrap
 
-.fw-font-truth-r
-  font-family: 'TruthCyrRegular'
+.fw-font-black-d
+  font-family: 'BlackDiamond'
 
-.fw-font-truth-l
-  font-family: 'TruthCyrLight'
+.fw-font-circle-b
+  font-family: 'CirceBold'
 
-.fw-font-truth-m
-  font-family: 'TruthCyrMedium'
+.fw-font-circle-r
+  font-family: 'CirceRegular'
 
-.fw-font-roboto-r
-  font-family: 'RobotoRegular'
+.fw-font-circle-l
+  font-family: 'CirceLight'
