--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,19 +1,24 @@
 @font-face
   font-family: 'BlackDiamond'
-  src: url('/fonts/BlackDiamond/BlackDiamond.ttf')
-  src: url('/fonts/BlackDiamond/BlackDiamond.eot') format('embedded-opentype'), url('/fonts/BlackDiamond/BlackDiamond.woff') format('woff')
+  src: url('../fonts/BlackDiamond/BlackDiamond.ttf')
+  src: url('../fonts/BlackDiamond/BlackDiamond.eot') format('embedded-opentype'), url('../fonts/BlackDiamond/BlackDiamond.woff') format('woff')
 
 @font-face
   font-family: 'CirceBold'
-  src: url('/fonts/CirceBold/CirceBold.ttf')
-  src: url('/fonts/CirceBold/CirceBold.eot') format('embedded-opentype'), url('/fonts/CirceBold/CirceBold.woff') format('woff')
+  src: url('../fonts/CirceBold/CirceBold.ttf')
+  src: url('../fonts/CirceBold/CirceBold.eot') format('embedded-opentype'), url('../fonts/CirceBold/CirceBold.woff') format('woff')
 
 @font-face
   font-family: 'CirceRegular'
-  src: url('/fonts/CirceRegular/CirceRegular.ttf')
-  src: url('/fonts/CirceRegular/CirceRegular.eot') format('embedded-opentype'), url('/fonts/CirceRegular/CirceRegular.woff') format('woff')
+  src: url('../fonts/CirceRegular/CirceRegular.ttf')
+  src: url('../fonts/CirceRegular/CirceRegular.eot') format('embedded-opentype'), url('../fonts/CirceRegular/CirceRegular.woff') format('woff')
 
 @font-face
   font-family: 'CirceLight'
-  src: url('/fonts/CirceLight/CirceLight.ttf')
-  src: url('/fonts/CirceLight/CirceLight.eot') format('embedded-opentype'), url('/fonts/CirceLight/CirceLight.woff') format('woff')
+  src: url('../fonts/CirceLight/CirceLight.ttf')
+  src: url('../fonts/CirceLight/CirceLight.eot') format('embedded-opentype'), url('../fonts/CirceLight/CirceLight.woff') format('woff')
+
+@font-face
+  font-family: 'CirceExtraBold'
+  src: url('../fonts/CirceExtraBold/CirceExtraBold.ttf')
+  src: url('../fonts/CirceExtraBold/CirceExtraBold.eot') format('embedded-opentype'), url('../fonts/CirceExtraBold/CirceExtraBold.woff') format('woff')
