--- a/app/twig/layouts/footer.twig
+++ b/app/twig/layouts/footer.twig
@@ -1,5 +1,5 @@
-<footer class="footer">
+<footer class="footer fw-bg-color-red">
     <div class="container fw-flex fw-flex-column">
-      <h1>FOOTER</h1>
+      <p class="fw-color-white fw-font-black-d fw-fz-24 fw-margin-0 fw-text-center fw-line-height-30">2019 © Михаил Авдеев</p>
     </div>
 </footer>
