--- a/app/sass/_variables.sass
+++ b/app/sass/_variables.sass
@@ -1,9 +1,9 @@
-$padding: (0, 10, 15, 40, 45, 50, 57)
-$margin: (0, 10, 12, 15, 20, 25, 50)
+$padding: (0, 10, 15, 20, 25, 40, 45, 50, 55, 57, 60, 70, 83, 85, 130, 110)
+$margin: (0, 7, 10, 12, 13, 15, 20, 25, 30, 40, 50, 65, 73)
 $marginInverse: (0)
 $fz: (0, 12, 14, 15, 17, 20, 24, 26, 28, 32, 36, 45, 65, 85)
-$grid: (0, 80)
-$width: (0)
+$grid: (0, 80, 190)
+$width: (0, 400)
 $height: (0)
 $top: (0)
 $right: (0)
