--- a/app/twig/layouts/scripts.twig
+++ b/app/twig/layouts/scripts.twig
@@ -1,4 +1,5 @@
 <!--build:js js/common.js-->
 <script src="vendor/jquery.min.js"></script>
+<script src="vendor/slick.min.js"></script>
 <script src="js/app.js"></script>
 <!--endbuild-->
