--- a/app/twig/layouts/stylesheets.twig
+++ b/app/twig/layouts/stylesheets.twig
@@ -1,4 +1,4 @@
 <!--build:css css/common.css-->
-<link rel="stylesheet" href="fonts/custom-svg-font/css/custom-svg-font.css">
+<link rel="stylesheet" href="vendor/slick.css">
 <link rel="stylesheet" href="css/app.css">
 <!--endbuild-->
